--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /#publications
+  - title: "About Me"
+    url: /#about-me
 
   - title: "Publications"
     url: /#publications   
